--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@skpm/builder": "^0.7.4",
     "@skpm/extract-loader": "^2.0.2",
+    "cocoascript-types": "^0.0.8",
     "css-loader": "^3.2.0",
     "html-loader": "^0.5.5"
   },
@@ -29,7 +30,17 @@
     "resources/**/*.js"
   ],
   "dependencies": {
-    "sketch-module-web-view": "^3.1.4"
+    "@andrewstart/sketch.d.ts": "^0.0.5",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.25",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "sketch-module-web-view": "^3.1.4",
+    "sketch-types": "^0.4.3",
+    "ts-loader": "^8.0.17",
+    "typescript": "^4.1.5"
   },
   "author": "chewbecca <beckybettinger@yahoo.de>"
 }
