--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "devDependencies": {
     "@skpm/builder": "^0.7.4",
     "@skpm/extract-loader": "^2.0.2",
+    "@types/node": "^14.14.27",
     "cocoascript-types": "^0.0.8",
     "css-loader": "^3.2.0",
-    "html-loader": "^0.5.5"
+    "html-loader": "^0.5.5",
+    "prettier": "^2.2.1"
   },
   "resources": [
     "resources/**/*.js"
@@ -32,7 +34,6 @@
   "dependencies": {
     "@andrewstart/sketch.d.ts": "^0.0.5",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.1",
