--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
     {
       "name": "my-command",
       "identifier": "chakrathememaker.my-command-identifier",
-      "script": "./my-command.js",
+      "script": "./my-command.ts",
       "handlers": {
         "run": "onRun",
         "actions": {
