--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,22 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "esModuleInterop": true,
     "jsx": "react",
+    "lib": ["dom", "ES2020"],
     "module": "commonjs",
+    "moduleResolution": "node",
     "noImplicitAny": true,
     "preserveConstEnums": true,
     "removeComments": true,
     "sourceMap": true,
     "target": "es5",
-    "esModuleInterop": true
+    "types": [
+      "sketch-types",
+      "sketch-internal-types",
+      "cocoascript-types",
+      "node"
+    ]
   },
-  "include": ["."],
-  "types": ["cocoascript-types"]
+  "include": ["src", "resources"]
 }
