--- a/package.json
+++ b/package.json
@@ -33,11 +33,16 @@
   ],
   "dependencies": {
     "@andrewstart/sketch.d.ts": "^0.0.5",
+    "@chakra-ui/react": "^1.3.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "framer-motion": "^3.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-query": "^3.9.3",
     "sketch-module-web-view": "^3.1.4",
     "sketch-types": "^0.4.3",
     "ts-loader": "^8.0.17",
